# ros2_shipmodel3dof

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: nomoto_ode.hpp  odeint_obs.hpp  odeint_sim.hpp  ros2_sim.hpp
launch/: shipmodel3dof_launch.py
src/: main.cpp  odeint_sim.cpp  ros2_sim.cpp
test/nomoto/: CMakeLists.txt  test.cpp  test_config.yaml
test/ros2/: expected_data.yaml  input_data.yaml  simulation_launch_testing.py  test_nomoto_config.yaml
